--- a/templates/chat.html
+++ b/templates/chat.html
@@ -1192,6 +1192,7 @@
         </div>
     </div>
 
+    <script src="{{ url_for('static', filename='js/viewport-fix.js') }}"></script>
     <script>
         // Store user name for use in messages
         const userName = "{{ user_name }}";
